--- a/main.css
+++ b/main.css
@@ -18,32 +18,38 @@ header { background: grey;
     padding-bottom: 30px;}
 
 nav a {color:pink;
-    font-family: 'Maven Pro', sans-serif;
+font-family: 'Lobster', cursive;
     text-decoration: overline}
+a:hover {opacity: 0.75;
+    font-style:italic;}
 
 h1 { color:pink;
     font-size:40px;
     text-align:center;
     text-decoration:overline;
-    font-family: 'Maven Pro', sans-serif;}
+    font-family: 'Lobster', cursive;}
 p { color:grey;
     font-size:20px;
-        font-family: 'Maven Pro', sans-serif;
+font-family: 'Handlee', cursive;    
     text-align:center}
 ul li { color:grey;
     font-size:20px;
     text-align:center;
-    font-family: 'Maven Pro', sans-serif;
+    font-family: 'Handlee', cursive;
+
     list-style: none;
     }
 h3 { color:grey;
     font-size: 10px;
-    font-family: 'Maven Pro', sans-serif;
+    font-family: 'Handlee', cursive;
 }
 
 h4 { color:grey;
     font-size: 30px;
-    font-family: 'Maven Pro', sans-serif;
+   font-family: 'Handlee', cursive;
     text-align: center;
 }
     
+.photohome { margin:auto;
+    display: block;
+    width: 160px; }
